# agent-job

./: .actrc  .gitignore  .pylintrc  .secrets.example  CLAUDE.md  Dockerfile  HEARTBEAT.md  Makefile  README.md  SPEC.md  alembic.ini  claude.md  codereview.md  coordinator.py  coverage.json  deploy.js  mypy.ini  package-lock.json  pyproject.toml  pytest.ini  railway-cli-4.36.1.tgz  railway-deploy.js  railway.json  run_agents.py  test_engine.py  ws_send.cjs  ws_send.js  ws_send.mjs  ws_send.py
.act/: Dockerfile
.clawd-agents/: agent-1776089322127502311.json  agent-1776089322127502311.md  agent-1776089323881886174.json  agent-1776089323881886174.md  agent-1776089324107736817.json  agent-1776089324107736817.md  agent-1776089324325072971.json  agent-1776089324325072971.md  agent-1776089354390594425.json  agent-1776089354390594425.md  agent-1776089354624921704.json  agent-1776089354624921704.md  agent-1776089354841859310.json  agent-1776089354841859310.md  agent-1776092270447098202.json  agent-1776092270447098202.md
.githooks/: README.md  pre-commit  pre-push
.github/workflows/: auto-pr.yml  auto-review.yml  checkout-and-commit.yml  ci.yml  claude-code.yml  fix-pr-comments.yml  implement-ready-issues.yml  monitor-issues.yml  pipeline-code-review.yml  pipeline-deploy.yml  pipeline-doc-sync.yml  pipeline-qc.yml  pipeline-schema-drift.yml  pipeline-test.yml  repair-doc-links.yml  review-open-prs.yml
.hermes/plans/: 2026-03-24_014500-agent-job-team-setup.md  2026-03-24_014500-mypy-fix-plan.md
.plans/: issue-106.md  issue-109.md  issue-110.md  issue-113.md  issue-118.md  issue-142.md  issue-143.md  issue-144.md  issue-145.md  issue-146.md  issue-147.md  issue-148.md  issue-199.md  issue-226.md  issue-227.md  issue-273.md  issue-426.md  issue-430.md  issue-434.md  issue-456.md  issue-461.md  issue-466.md  issue-471.md  issue-472.md  issue-485.md  issue-495.md  issue-502.md  issue-503.md  issue-505.md  issue-506.md  issue-507.md  issue-508.md  issue-510.md  issue-511.md  issue-516.md  issue-524.md  issue-529.md  issue-530.md  issue-540.md  issue-548.md  (+30 more)
.skill/dev-agent-system/: SKILL.md
agents/: base_agent.py
agents/code_review/: prompt_config.md  review_agent.py
agents/coordinator/: coordinator_agent.py  prompt_config.md
agents/deploy/: deploy_agent.py
agents/qc/: qc_agent.py
agents/supervisor/: supervisor.py
agents/test/: test_agent.py
alembic/: env.py
alembic/versions/: 06456391eff1_add_channel_to_notifications.py  127938d15761_add_smart_notifications_table.py  185055a0d4f0_add_workflow_nodes.py  195a79d95b41_add_rbac_schema.py  330544dea367_drift_check.py  37fa45f0f9c4_initial.py  3ea69d66514e_sync_models_with_db.py  (+46 more)
bot/: telegram_bot.py
code-review-agent/: SOUL.md
configs/: docker-compose.test.yml  mock-api.conf
creative-background-music/: README.md
deploy-agent/: SOUL.md
docs/: DEV.md  EXTERNAL_ACCESS.md  MULTI_AGENT_DESIGN.md  MULTI_TURN_REVIEW.md  PROD_FRONTEND.md  PROD_SPEC.md  ROUTER_SERVICE_COMPARISON.md  crm_ui.html  mypy-errors-2026-03-24.md  team-workflow.md
frontend/: .env.local.example  .prettierignore  .prettierrc  README.md  components.json  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
memory/: 2026-05-03.md  2026-05-15.md  heartbeat-state.json
scripts/: build_claw_code_arm64.sh  coordinate.py  deploy.py  run_orchestrator.py
shared-memory/: PROGRESS.md  orchestrator_queue.json  orchestrator_state.json
shared_memory/: __init__.py  project_board.py
sql/: 001_schema.sql
src/: app.py  main.py  math_utils.py  sample_module.py  server.py
test-agent/: SOUL.md
tests/: conftest.py  test_tenant_isolation.py
(+813 files in other folders)
