[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-agent-system"
version = "0.1.0"
description = "Multi-Agent Development System with CI, Testing, and Code Review"
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.0",
    "requests>=2.28",
    "sqlalchemy>=2.0",
    "fastapi>=0.100",
    "pydantic>=2.0",
    "uvicorn>=0.20",
    "httpx>=0.24",
    "python-jose>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "openpyxl>=3.0",
    "pylint>=2.17",
    "flake8>=6.0",
    "mypy>=1.0",
    "build>=0.10",
    "requests>=2.28",
    "sqlalchemy>=2.0",
    "fastapi>=0.100",
    "pydantic>=2.0",
    "uvicorn>=0.20",
    "httpx>=0.24",
    "python-jose>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pylint]
max-line-length = 120
disable = ["C0111", "R0903"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
