[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-agent-system"
version = "0.1.0"
description = "Multi-Agent Development Pipeline System (Test → Code Review → QC → Deploy)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100,<1.0",
    "uvicorn[standard]>=0.23,<1.0",
    # Database
    "sqlalchemy>=2.0,<3.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9,<3.0",
    "alembic>=1.13,<2.0",
    # Utils
    "bcrypt>=4.1",
    "python-dotenv>=1.0,<2.0",
    "PyJWT>=2.8",
    "pymysql>=1.1,<2.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "python-multipart>=0.0.17",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28",
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.9",
    "mypy>=1.0",
    "openpyxl>=3.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".git", "tests", "__pycache__", ".venv", "venv", ".mypy_cache"]

[tool.ruff.lint]
select = ["E", "F", "UP", "S", "I", "W"]
ignore = ["E501"]  # line-length handled by line-length setting

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "INP001"]  # assert okay in tests, hardcoded password okay in integration test seeds
"src/main.py" = ["F401"]  # app may import without using all routers
